k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cross-border-mifos
  namespace: cross-border-mifos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: cross-border.mifos.sandbox.govstack.global
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cross-border-mifos
                port:
                  number: 80
  tls:
    - hosts:
        - cross-border.mifos.sandbox.govstack.global
      secretName: cross-border-mifos-tls
